--- a/JS/bai1_part9_js/bai1.html
+++ b/JS/bai1_part9_js/bai1.html
@@ -29,7 +29,7 @@
     .then(data => {
       renderCountry(data[0]); // hàm render đã có từ bài trước
     })
-    .catch(err => console.error(`💥 ${err.message}`));
+    .catch(err => console.error(` ${err.message}`));
 };
     whereAmI(52.508, 13.381);   // Berlin
 whereAmI(19.037, 72.873);  // Mumbai
